fix z-index for loader / spinner overlay

--- a/src/modules/adsb-feeder/filesystem/root/opt/adsb/adsb-setup/static/css/style.css
+++ b/src/modules/adsb-feeder/filesystem/root/opt/adsb/adsb-setup/static/css/style.css
@@ -3,7 +3,7 @@
   position: absolute;
   left: 50%;
   top: 25%;
-  z-index: 20;
+  z-index: 2020;
   width: 120px;
   height: 120px;
   margin: -76px 0 0 -76px;
@@ -49,7 +49,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   /* Black background with opacity */
-  z-index: 10;
+  z-index: 2010;
   /* Specify a stack order in case you're using a different order for other elements */
   cursor: pointer;
   /* Add a pointer on hover */
@@ -60,6 +60,7 @@
   top: 50%;
   left: 50%;
   font-size: 50px;
+  z-index: 2020;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
